--- a/wp-content/themes/academica/style.css
+++ b/wp-content/themes/academica/style.css
@@ -506,13 +506,13 @@ img.aligncenter,
 }
 
 #main-nav {
- 	margin: 0;
-  	padding: 10px 0 0;
+ 	margin: 0 auto;
+  	padding: 10px 20px 0;
 	position: relative;
 	line-height: 1.8;
  	z-index: 300;
- 	display: inline-block;
- 	width: 100%;
+ 	/*display: inline-block;*/
+ 	width: 1130px;
  	border-top: 1px solid #261D80;
  	background-color: #1B155C;
 }
